# ytcasts

./: .gitignore  .travis.yml  Makefile  README.md  bower.json  default.nix  install-deps.nix  package-lock.json  package.json  packages.nix  psc-package.json  schema.sql
YTCClient/: index.android.js  index.ios.js  package.json
YTCClient/android/: settings.gradle
YTCClient/android/app/: BUCK  build.gradle
YTCClient/android/app/src/main/: AndroidManifest.xml
YTCClient/android/app/src/main/java/com/ytcclient/: MainActivity.java  MainApplication.java
YTCClient/android/app/src/main/res/values/: strings.xml
YTCClient/ios/YTCClient/: AppDelegate.m
YTCClient/ios/YTCClient.xcodeproj/: project.pbxproj
YTCClient/ios/YTCClient.xcodeproj/xcshareddata/xcschemes/: YTCClient.xcscheme
YTCClient/ios/YTCClient/Base.lproj/: LaunchScreen.xib
YTCClient/ios/YTCClientTests/: YTCClientTests.m
YTCClient/src/: index.js
serve/: serve.cabal  stack.yaml
serve/app/: Main.hs
src/: Main.js  Main.purs  YTCasts.js  YTCasts.purs
src/YTCasts/: Exe.purs
